# jolt-ml

./: dockerfile
examples/alloc/: Cargo.toml
examples/alloc/guest/: Cargo.toml
examples/alloc/guest/model/: Test_Dataset.csv  linear_regression_params.json  scaler_params.json
examples/alloc/guest/src/: lib.rs  predictions.rs
examples/alloc/src/: main.rs  models.rs
examples/stdlib/: Cargo.toml
examples/stdlib/guest/: Cargo.toml
examples/stdlib/guest/model/: polynomial_ridge_regression_params.json  ridge_regression_params.json
examples/stdlib/guest/src/: lib.rs  models.rs  predictions.rs
examples/stdlib/src/: main.rs
