[package]
name = "stdlib"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { path = "../../jolt-sdk", features = ["host"] }
guest = { package = "guest", path = "./guest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.16.0", features = ["serde"] }
csv = "1.1"

[profile.release]
debug = true
